tests-system/names_unique_globally/output
A.L L1 { 
    ^^ names_unique_globally/f1.trlc:4: error: required component l (see def.rsl:4) is not defined
A.L L1 {
    ^^ names_unique_globally/f2.trlc:3: error: duplicate definition, previous definition at f1.trlc:4
Processed 1 model, and 2 requirement files and found 2 errors
